css/flowplayer.css
/* ... */
.flowplayer.fp-edgy.fp-outlined .fp-volumebtn:before, .flowplayer.fp-edgy.fp-minimal .fp-volumebtn:before { content: "\e30b"; }
.flowplayer.fp-edgy.fp-outlined .fp-volume-off:before, .flowplayer.fp-edgy.fp-minimal .fp-volume-off:before { content: "\e30d"; }
.flowplayer.fp-edgy.fp-outlined .fp-unload:before, .flowplayer.fp-edgy.fp-minimal .fp-unload:before { content: "\e30f"; }
.flowplayer.fp-edgy.fp-outlined .fp-prevbtn:before, .flowplayer.fp-edgy.fp-minimal .fp-prevbtn:before, .flowplayer.fp-outlined .fv-fp-prevbtn:before, .flowplayer.fp-edgy.fp-minimal .fv-fp-prevbtn:before { content: "\e311"; }
.flowplayer.fp-edgy.fp-outlined .fp-nextbtn:before, .flowplayer.fp-edgy.fp-minimal .fp-nextbtn:before, .flowplayer.fp-outlined .fv-fp-nextbtn:before, .flowplayer.fp-edgy.fp-minimal .fv-fp-nextbtn:before { content: "\e312"; }
.flowplayer.fp-outlined .fv-fp-prevbtn:after {display: none;}


.flowplayer.no-svg .fp-ui .fp-play.fp-visible {
  /*background-color: #ccc;*/
  position: absolute;
  font-size: 2.5em;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
  width: 6em;
  height: 6em;
  max-height: 38%;}
  .flowplayer.no-svg .fp-ui .fp-play.fp-visible svg {
    display: none; }
  .flowplayer.no-svg .fp-ui .fp-play.fp-visible .fp-playbtn {
    display: block;
    -webkit-filter: drop-shadow( 0 0 4px #aaa );
  	filter: drop-shadow( 0 0 4px #aaa )	}
.flowplayer.no-svg .fp-play.fp-visible .fp-icon:before {
	font-size: inherit;
}
.flowplayer .fp-player, .flowplayer .fp-ui, .flowplayer .fp-header, .flowplayer .fp-captions, .flowplayer .fp-controls {
  position: absolute;
  width: 100%; }

.flowplayer {
  font-family: avenir, sans-serif;
  font-size: 16px;
  position: relative;
  max-height: 100%;
  overflow: visible;
  border-radius: .24em;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  zoom: 1 !important;
  width: 100%;
  display: inline-block; }
  .flowplayer .fp-hidden {
    display: none; }
  .flowplayer .fp-shown {
    display: block !important; }
  .flowplayer * {
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
            box-sizing: border-box; }
  .flowplayer.is-ready:not(.is-poster) {
    background-color: #333; }
  .flowplayer .fp-engine {
    display: block;
    width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100% !important;
    width: 100%; }
  .flowplayer video.fp-engine:not(.native-subtitles)::-webkit-media-controls {
    display: none !important; }
  .flowplayer .fp-player {
    position: absolute;
    bottom: 0;
    top: 0; }
  .flowplayer .fp-waiting {
    display: none; }
    .flowplayer .fp-waiting p {
      filter: alpha(opacity=0);
      opacity: 0;
      color: #ccc;
      font-weight: bold; }
  .flowplayer .fp-ui {
    height: 100%;
    top: 0;
    background-image: none;
    -webkit-transition: background-image .1s;
    transition: background-image .1s;
    text-align: center;
    cursor: pointer;
    color: #fff; }
    .flowplayer .fp-ui a, .flowplayer .fp-ui strong, .flowplayer .fp-ui a:before {
      color: inherit !important;
      font-style: normal !important;
      text-decoration: none !important; }
    .flowplayer .fp-ui > * {
      -webkit-transition: opacity .1s;
      transition: opacity .1s;
      filter: alpha(opacity=0);
      opacity: 0; }
    .flowplayer.fp-ui-shown .fp-ui, .flowplayer.is-mouseover .fp-ui, .flowplayer.is-loading .fp-ui, .is-splash.flowplayer .fp-player .fp-ui, .is-paused.flowplayer .fp-player .fp-ui,#content .is-paused.flowplayer .fp-player .fp-ui,#content .is-splash.flowplayer .fp-player .fp-ui {
    /*background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.25)), color-stop(15%, transparent));
    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.25), transparent 15%);
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.25), transparent 15%);*/
	background-image: none;}
    .flowplayer.fp-ui-shown .fp-ui > *, .flowplayer.is-paused .fp-ui > *, .flowplayer.is-mouseover .fp-ui > *, .flowplayer.is-loading .fp-ui > *, .flowplayer.is-seeking .fp-ui > *  {
      filter: alpha(opacity=100);
      opacity: 1; }
  .flowplayer .fp-header {
    top: 0;
    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.25)), to(transparent));
    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.25), transparent);
    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), transparent);
    text-align: left;
    height: 3em;
    -webkit-transition: opacity .3s;
    transition: opacity .3s;
    padding-left: .65em; }
    .flowplayer .fp-header .fp-icon {
      margin: .9em .9em 0 0; }
      .flowplayer .fp-header .fp-icon.fp-active {
        color: #ec6c4c; }
    .flowplayer .fp-header .fp-fullscreen, .flowplayer .fp-header .fp-unload, .flowplayer .fp-airplay {
      float: right; }
    .fp-chromecast {
      float: right;
    }
    .flowplayer .fp-header .fp-unload {
      display: none; }
  .flowplayer .fp-help {
    display: none; }
  .flowplayer .fp-message {
    background-color: rgba(0, 0, 0, 0.5);
    text-align: left;
    font-size: 1.2em;
    overflow: hidden;
    filter: alpha(opacity=0);
    opacity: 0;
    padding: .6em .9em;
    -webkit-transition: opacity 0.3s;
    transition: opacity 0.3s; }
    .flowplayer .fp-message.fp-shown {
      filter: alpha(opacity=100);
      opacity: 1; }
  .flowplayer .fp-message.fp-shown + .fp-header {
    filter: alpha(opacity=0);
    opacity: 0; }
  .flowplayer.forced-fullscreen.is-loading .fp-message.fp-shown + .fp-header {
    filter: alpha(opacity=1);
    opacity: 1; }
  .flowplayer.forced-fullscreen.is-loading .fp-message.fp-shown + .fp-header .fvp-share-bar, .flowplayer.forced-fullscreen.is-loading .fp-message.fp-shown + .fp-header .fp-fullscreen {
    filter: alpha(opacity=0);
    opacity: 0; }    
/* ... */

